risd-bfa2020/css.css
/*--------------------------------------------------------------
    Global elements
--------------------------------------------------------------*/

body {
    margin: 0;
    transition: all .6s;
    -webkit-font-smoothing: antialiased;
}

@font-face {
    font-family: "HelveticaNeue";
    src:url("fonts/5664093/08b57253-2e0d-4c12-9c57-107f6c67bc49.woff2") format("woff2"),url("fonts/5664093/08edde9d-c27b-4731-a27f-d6cd9b01cd06.woff") format("woff");

}

@font-face {
    font-family: "Lido";
    src: url('fonts/font.woff2') format('woff2'), url('fonts/font.woff') format('woff');

}

a {
    color:inherit;
    transition: all .8s ease-in;
}

canvas {
    position: absolute;
    top: 0;
    font-family: "Lido";
}


/*--------------------------------------------------------------
    Typography
--------------------------------------------------------------*/

h1 {
    font-family: "HelveticaNeue";
    font-size: 3rem;
    line-height: 1rem;
    font-weight: normal;
    margin-block-start: 0;
    margin-block-end: 0;
}


h3 {
    font-family: "HelveticaNeue";
    font-size: 1.2rem;
    line-height: 1.4rem;
    font-weight: normal;
    margin-block-start: 0;
    margin-block-end: 0;
    letter-spacing: -0.02em;
}


/*--------------------------------------------------------------
    Header
--------------------------------------------------------------*/

header {
    z-index: 10;
    width: 96%;
    position: relative;
    left: 0;
    top: 0;
    padding: 2%;
    text-transform: uppercase;
    color: white;
}

header h1 {
    position:absolute;
    cursor: pointer;
}

header h1 a {
    text-decoration: none;
    opacity:1;
}

header h1:hover {
    opacity:0.8;
}

header h1:nth-child(2) {
    text-align: right;
    right:2%;
}

header h1:nth-child(2)::after {
    content: '\25B4'; 
    display: inline-block;
    font-size: 5rem;
    line-height: 0;
    margin-right: -3rem;
    padding-left: 1.5rem;
    margin-right: -1.5rem;
    -webkit-transform: rotate(90deg);
    -moz-transform: rotate(90deg);
    -o-transform: rotate(90deg);
    -ms-transform: rotate(90deg);
    transform: rotate(90deg);
}

header.active h1:nth-child(2)::after {
    font-size: inherit;
    padding-left:0;
    padding-bottom: 2rem;
    margin-right: 0;
    -webkit-transform: rotate(30deg) scale(1.3) translateY(-4px);
    -moz-transform: rotate(30deg) scale(1.3) translateY(-4px);
    -o-transform: rotate(30deg) scale(1.3) translateY(-4px);
    -ms-transform: rotate(30deg) scale(1.3) translateY(-4px);
    transform: rotate(30deg) scale(1.3) translateY(-4px);
}

header.active {
    padding-top: 2.5%;
    transform: scale(0.65);
    transform-origin: left top;
}


/*--------------------------------------------------------------
  Right menu
--------------------------------------------------------------*/

ul {
    flex-wrap: wrap;
    margin: 0;
    margin-top: 15px;
    margin-bottom: 15px;
    padding: 0 2vw;

}

ul li {
    font-size: 3vw;
    font-family: "HelveticaNeue";
    text-decoration: none;
    list-style-type: none;
    line-height: 1em;
    margin: 0;
    padding: 0;
    padding-bottom: 0.4em;
}

li a {
    target-name: new;
    target-new: tab;
    text-decoration: none;
    color: inherit;
    transition: all .3s;

}

li a:hover {
    /* text-decoration: underline; */
}


h3 a {
    text-decoration: underline;
}

h3 a:hover {
    text-decoration: none;
}



#names {
    color: white;
    width: 35vw;
    transform: translateX(44vw);
    transition: transform 0.25s;
    position: fixed;
    z-index: 10;
    background: black;
    right: 0;
    top: 0;
    bottom: 0;
    line-height: 0.9em;
    overflow-y: scroll;
    letter-spacing: -0.06em;
}

#names.active {
    transform: translateX(0);
}

#downloadlink{
    display: block;
    margin: .6rem 0 1.3rem 0;
}



#thumb {
    position: absolute;
    z-index: 100;
    max-width: 300px;
    max-height: 200px; 
    opacity: 0;
    transition: opacity .8s;
    border: none;
}

#thumb.visible {
    opacity: 1;
}

#thumb img {
    max-width:300px;
    max-height: 350px;
}

#thumb img.wide {
    height:100px;
}

#thumb img.square {
    height:250px;
}

#thumb img.landscape {
    height:150px;
}

#thumb img.portrait {
    height:400px;
}
#thumb img.portrait-long {
    height:500px;
}


/*--------------------------------------------------------------
    Media quries
--------------------------------------------------------------*/


@media only screen and (max-width: 1080px) {

    h1 {
        font-size:2.5rem;
    }

    header h1:nth-child(2)::after{
        font-size: 4rem;
        padding-left: 1rem;
    }
    header.active h1:nth-child(2)::after{
        padding-bottom: 1rem;
    }
    
}

@media only screen and (max-width: 800px) {
    h1 {
        font-size: 1.5rem;
    }
    header h1:nth-child(2)::after{
        font-size: 3rem;
    }
    header.active h1:nth-child(2)::after{
        padding-bottom: .5rem;   
    }
}

@media only screen and (max-width: 414px) {
    h1 {
        font-size: 1.5rem;
    }
} 

